<resources>
    <string name="back">Back</string>
    <string name="back_button_description">Back</string>
    <string name="continue_button">Continue</string>
    <string name="app_name">Smishing Detection</string>
    <string name="bot_profile_icon">Bot Profile Icon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_saved_articles">No saved articles yet.</string>
    <string name="baseline_keyboard_arrow_right_24">Right Arrow</string>
    <string name="menu_home">Home</string>
    <string name="menu_report">Report</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="action_welcome_to_screen">Welcome Back</string>
    <string name="action_login_in">Login</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be &gt;5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_description">App Logo</string>
    <string name="chat_history">Chat History</string>
    <string name="clear_chat_history">Clear chat history</string>
    <string name="history">View chat history</string>
    <string name="chat_assistant_btn">Get Support</string>
    <string name="chat_assistant_page">Support Chat</string>
    <string name="back_button_desc">Back</string>
    <string name="send_button_desc">Send</string>
    <string name="support_hint">Type your message...</string>
    <string name="support_title">AI Support</string>
    <string name="chat_back_desc">Back</string>
    <string name="send_message">Send message</string>
    <string name="chat_input_hint">Type your message...</string>
    <string name="cd_back">Back</string>
    <string name="cd_send">Send message</string>
    <string name="cd_logo">App logo</string>
    <string name="cd_history">Open chat history</string>
    <string name="cd_send_button">Send message button</string>
    <string name="cd_message_input">Editable text field to type your message</string>
    <string name="chat_welcome_1">Hi! I’m the Smishing Smart Assistant.</string>
    <string name="chat_welcome_2">I can help explain smishing, check suspicious texts, or show how to report them.</string>
    <string name="chat_welcome_3">Try: "What is smishing?" or paste a message you want me to check.</string>
    <string name="export_chat_history">Export chat history</string>
    <string name="chat_history_exported">Chat history exported successfully.</string>
    <string name="cd_menu">More options</string>
    <string name="export_chat_history_txt">Export chat history (TXT)</string>
    <string name="export_chat_history_pdf">Export chat history (PDF)</string>
    <string name="smishing_assistant">Smishing Assistant</string>
    <string name="support_feedback_title">Support Feedback</string>
    <string name="feedback_header">Smishing Assistant</string>
    <string name="select_rating">Select rating</string>
    <string name="feedback_q1">Has your issue been solved?</string>
    <string name="feedback_yes">Yes 🙂</string>
    <string name="feedback_no">No 🙁</string>
    <string name="feedback_select_yes_no">Please select Yes or No.</string>
    <string name="feedback_q2">How would you rate our support service?</string>
    <string name="feedback_apology">We apologize for any inconvenience. We will work harder to improve our services!</string>
    <string name="no_specific_issue">No specific issue selected</string>
    <string name="experience_problems">Did you experience any of the following problems?</string>
    <string name="problem_solution_not_helpful">Solution not helpful</string>
    <string name="problem_robotic_replies">Robotic replies</string>
    <string name="problem_slow_response">Slow response</string>
    <string name="problem_wrong_words">Wrong words used</string>
    <string name="problem_repetitive">Getting repetitive questions</string>
    <string name="problem_unfriendly">Unfriendly attitude</string>
    <string name="feedback_hint">Please tell us more...</string>
    <string name="feedback_more">Please provide more details</string>
    <string name="feedback_counter">0/280</string>
    <string name="feedback_submit">Submit</string>
    <string name="thank_you_message">Thank you for your valuable feedback!</string>
    <string name="close">Close</string>
    <string name="feedback_submitted">Your feedback has been submitted.</string>
    <string name="smishing_ai_assistant">Smishing AI Assistant</string>
    <string name="support_feedback_details_title">Feedback Details</string>
    <string name="chat_rated_success">Chat rated successfully</string>
    <string name="feedback_positive_msg">Thank you for your feedback! Your support motivates us to keep improving.</string>
    <string name="feedback_neutral_msg">Thanks for sharing your feedback. We’ll continue working to provide a better experience.</string>
    <string name="feedback_negative_msg">We apologize for any inconvenience. We will work harder to improve our services!</string>
    <string name="cd_success">Feedback submitted successfully</string>
    <string name="feedback_thank_you">Thank you for your feedback! Your support is what motivates us to keep improving.</string>
    <string name="feedback_summary_default">Excellent</string>
    <string name="rating_poor">Poor 😞</string>
    <string name="rating_fair">Fair 😐</string>
    <string name="rating_average">Average 🙂</string>
    <string name="no_network_message">No available network. Please check your internet connection or try again later</string>
    <string name="login_page">Login</string>
    <string name="detections_str">Detections</string>
    <string name="menu_news">News</string>
    <string name="play_alert_text">Play Alert Text</string>
    <string name="menu_Cyber_news">ACCC Scamwatch News</string>
    <string name="menu_settings">Settings</string>
    <string name="account_page">Account</string>
    <string name="report_page">Report Smishing</string>
    <string name="filtering_page">Smishing Rules</string>
    <string name="debug">Debug</string>
    <string name="help_page">Help</string>
    <string name="sms_page">SMS Messages</string>
    <string name="detectionsBtn">View Detections</string>
    <string name="new_detectionsTxt">New detections</string>
    <string name="total_detectionsTxt">Total detections</string>
    <string name="view_detections">View Detections</string>
    <string name="risk_scanner">Risk Scanner</string>
    <string name="password_changeBtn">Change Password</string>
    <string name="phone_changeBtn">Change Phone</string>
    <string name="email_changeBtn">Change Email</string>
    <string name="dark_modeBtn">Toggle Dark mode</string>
    <string name="delete_accountBtn">Delete account</string>
    <string name="sign_outBtn">Sign out</string>
    <string name="session_timeoutBtn">Session Timeout Settings</string>
    <string name="pin_changeBtn">Change Pin</string>
    <string name="terms_and_conditions">
&lt;b&gt;1.&lt;/b&gt; By using this app, you agree to comply with these terms.&lt;br/&gt;
&lt;b&gt;2.&lt;/b&gt; The app is provided on an as is basis, with no guarantees of accuracy or availability.&lt;br/&gt;
&lt;b&gt;3.&lt;/b&gt; You are responsible for ensuring you use the services in accordance with applicable laws.&lt;br/&gt;
&lt;b&gt;4.&lt;/b&gt; Unauthorized reproduction, modification, or distribution of this app or its content is strictly prohibited.&lt;br/&gt;
&lt;b&gt;5.&lt;/b&gt; We reserve the right to modify or discontinue the app without notice.&lt;br/&gt;
&lt;b&gt;6.&lt;/b&gt; We respect your privacy and commit to protecting your data as per the privacy policy outlined herein.&lt;br/&gt;
&lt;b&gt;7.&lt;/b&gt; Your personal data will only be used for purposes that you have explicitly agreed to.&lt;br/&gt;
&lt;b&gt;8.&lt;/b&gt; Any disputes arising from the use of this app will be subject to the jurisdiction of [Your Location].&lt;br/&gt;&lt;br/&gt;

&lt;b&gt;PRIVACY POLICY&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;

&lt;b&gt;1.&lt;/b&gt; We collect data to enhance your experience and improve our services.&lt;br/&gt;
&lt;b&gt;2.&lt;/b&gt; Your data will never be sold or shared with third parties without your consent, except as required by law.&lt;br/&gt;
&lt;b&gt;3.&lt;/b&gt; Cookies may be used to personalize content and ads.&lt;br/&gt;
&lt;b&gt;4.&lt;/b&gt; By continuing to use the app, you consent to our use of cookies.&lt;br/&gt;&lt;br/&gt;

&lt;b&gt;DISCLAIMER&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;

&lt;b&gt;1.&lt;/b&gt; This app is provided as-is without any warranties of any kind.&lt;br/&gt;
&lt;b&gt;2.&lt;/b&gt; We do not guarantee uninterrupted or error-free use of the app.&lt;br/&gt;
&lt;b&gt;3.&lt;/b&gt; We are not liable for any damages resulting from the use of this app.&lt;br/&gt;
&lt;b&gt;4.&lt;/b&gt; Always use caution when interacting with unknown parties through the app.&lt;br/&gt;&lt;br/&gt;
    </string>
    <string name="change_password_page">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="image_description">image_description</string>
    <string name="create_forum_topic">Create Forum Topic</string>
    <string name="forum_title">Forum Title</string>
    <string name="forum_description">Forum Description</string>
    <string name="submit">Submit</string>
    <string name="signature_summary">Add a signature to your messages</string>
    <string name="reply_summary">Choose how replies are handled</string>
    <string name="sync_summary">Enable or disable auto-sync</string>
    <string name="example_summary">This is an example preference summary</string>
    <string name="thank_you_request">Thank you for your request !</string>
    <string name="confirmation_message">We have received your message. We will get back to you shortly !</string>
    <string name="exit_to_settings">Exit to Settings</string>
    <string name="submit_another_response">Submit Another Response</string>
    <string name="widget_app_title">Smishing Detection App</string>
    <string name="widget_risk_score">Detections: --</string>
    <string name="widget_profile_type">User Type: --</string>
    <string name="widget_streak">Safe Days: --</string>
    <string name="widget_medium_title">Smishing Detection App</string>
    <string name="widget_medium_timestamp">Updated: --:--</string>
    <string name="widget_open_app_btn">Open App</string>
    <string name="widget_report_btn">Report Smishing</string>
</resources>